# GYRA

./: GYRA_ALL_UI.md  README.md  __main__.py  learn.py  packages.x86_64  pyproject.toml
cli/: install.py  learn.py  menu.py  update.py
cli/commands/: __init__.py  install.py
cli/data/tools/: aircrack-ng.yaml  binwalk.yaml  curl.yaml  gobuster.yaml  hashcat.yaml  hydra.yaml  john.yaml  metasploit.yaml  netcat.yaml  netdiscover.yaml  nikto.yaml  nmap.yaml  openssl.yaml  wireshark.yaml
docs/: BUILD.md  CONTRIBUTING.md
iso/: profiledef.sh
iso/airootfs/etc/: os-release
