[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gyra"
version = "0.1.0"
description = "GYRA Linux guided learning CLI and tool manager"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "GPL-3.0" }
dependencies = [
    "rich>=12.0.0",
    "pyyaml>=6.0"
]

[project.scripts]
gyra = "cli.__main__:main"
